; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ti-dac5571.c_dac5571_cmd_quad.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ti-dac5571.c_dac5571_cmd_quad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dac5571_data = type { i32*, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@DAC5571_CHANNEL_SELECT = common dso_local global i32 0, align 4
@DAC5571_LOADMODE_DIRECT = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dac5571_data*, i32, i32)* @dac5571_cmd_quad to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dac5571_cmd_quad(%struct.dac5571_data* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.dac5571_data*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.dac5571_data* %0, %struct.dac5571_data** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load %struct.dac5571_data*, %struct.dac5571_data** %5, align 8
  %10 = getelementptr inbounds %struct.dac5571_data, %struct.dac5571_data* %9, i32 0, i32 2
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = sub nsw i32 16, %13
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = shl i32 %15, %16
  %18 = load %struct.dac5571_data*, %struct.dac5571_data** %5, align 8
  %19 = getelementptr inbounds %struct.dac5571_data, %struct.dac5571_data* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 2
  store i32 %17, i32* %21, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %8, align 4
  %24 = sub i32 8, %23
  %25 = lshr i32 %22, %24
  %26 = load %struct.dac5571_data*, %struct.dac5571_data** %5, align 8
  %27 = getelementptr inbounds %struct.dac5571_data, %struct.dac5571_data* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 1
  store i32 %25, i32* %29, align 4
  %30 = load i32, i32* %6, align 4
  %31 = load i32, i32* @DAC5571_CHANNEL_SELECT, align 4
  %32 = shl i32 %30, %31
  %33 = load i32, i32* @DAC5571_LOADMODE_DIRECT, align 4
  %34 = or i32 %32, %33
  %35 = load %struct.dac5571_data*, %struct.dac5571_data** %5, align 8
  %36 = getelementptr inbounds %struct.dac5571_data, %struct.dac5571_data* %35, i32 0, i32 0
  %37 = load i32*, i32** %36, align 8
  %38 = getelementptr inbounds i32, i32* %37, i64 0
  store i32 %34, i32* %38, align 4
  %39 = load %struct.dac5571_data*, %struct.dac5571_data** %5, align 8
  %40 = getelementptr inbounds %struct.dac5571_data, %struct.dac5571_data* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = load %struct.dac5571_data*, %struct.dac5571_data** %5, align 8
  %43 = getelementptr inbounds %struct.dac5571_data, %struct.dac5571_data* %42, i32 0, i32 0
  %44 = load i32*, i32** %43, align 8
  %45 = call i32 @i2c_master_send(i32 %41, i32* %44, i32 3)
  %46 = icmp ne i32 %45, 3
  br i1 %46, label %47, label %50

47:                                               ; preds = %3
  %48 = load i32, i32* @EIO, align 4
  %49 = sub nsw i32 0, %48
  store i32 %49, i32* %4, align 4
  br label %51

50:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %51

51:                                               ; preds = %50, %47
  %52 = load i32, i32* %4, align 4
  ret i32 %52
}

declare dso_local i32 @i2c_master_send(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
